--- a/app/globles.css
+++ b/app/globles.css
@@ -1,5 +1,3 @@
-> app/globals.css
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -48,11 +46,9 @@ body {
   }
 
   .dark-gradient {
-    background: linear-gradient(
-      232deg,
-      rgba(23, 28, 35, 0.41) 0%,
-      rgba(19, 22, 28, 0.7) 100%
-    );
+    background: linear-gradient(232deg,
+        rgba(23, 28, 35, 0.41) 0%,
+        rgba(19, 22, 28, 0.7) 100%);
   }
 
   .tab {
@@ -65,16 +61,13 @@ body {
 }
 
 .active-theme {
-  filter: invert(53%) sepia(98%) saturate(3332%) hue-rotate(0deg)
-    brightness(104%) contrast(106%) !important;
+  filter: invert(53%) sepia(98%) saturate(3332%) hue-rotate(0deg) brightness(104%) contrast(106%) !important;
 }
 
 .light-gradient {
-  background: linear-gradient(
-    132deg,
-    rgba(247, 249, 255, 0.5) 0%,
-    rgba(229, 237, 255, 0.25) 100%
-  );
+  background: linear-gradient(132deg,
+      rgba(247, 249, 255, 0.5) 0%,
+      rgba(229, 237, 255, 0.25) 100%);
 }
 
 .primary-text-gradient {
@@ -142,6 +135,7 @@ code {
 
   color: inherit !important;
 }
+
 /* Markdown End */
 
 /* Clerk */
@@ -162,6 +156,8 @@ code {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .no-scrollbar {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
